core/src/main/test/templates/error/variable1.zs
[#while foo]
	${flip flap} <-- 21
[/#while]